--- a/WPF_AppLivery/WPF_AppLivery/MainWindow.xaml
+++ b/WPF_AppLivery/WPF_AppLivery/MainWindow.xaml
@@ -3,11 +3,27 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:sys="clr-namespace:System;assembly=System.Runtime"
         xmlns:local="clr-namespace:WPF_AppLivery"
         mc:Ignorable="d"
-        Title="ComicVine" Height="450" Width="800">
-    <Grid>
-        <DockPanel LastChildFill="False"/>
+        Title="ComicVine" Height="450" Width="800"
+        Loaded="Window_Loaded" 
+        Background="{DynamicResource WindowBackgroundBrush}">
+    <Window.Resources>
+        <x:Array x:Key="AuthorsList" Type="sys:String"/>
+        <LinearGradientBrush x:Key="WindowBackgroundBrush">
+            <GradientStop Offset="0" Color="Silver"/>
+            <GradientStop Offset="1" Color="Gray"/>
+        </LinearGradientBrush>
+    </Window.Resources>
+    <Grid Name="RootGrid">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="47*"/>
+            <ColumnDefinition Width="153*"/>
+        </Grid.ColumnDefinitions>
+        <ScrollViewer ScrollChanged="ScrollViewer_ScrollChanged">
+            <ListBox  Grid.Column="0" ItemsSource="{DynamicResource AuthorsList}"/>
+        </ScrollViewer>
 
     </Grid>
 </Window>
